@@ -44,6 +44,7 @@
    - my_editable_double_xxx(): are renamed to my_double_editable_xxx().
    - myDateCombo: rename 'ofa-changed' signal to 'my-changed'.
    - myDecimalCombo: rename 'ofa-changed' signal to 'my-changed'.
+   - myFieldCombo: rename 'ofa-changed' signal to 'my-changed'.
    - ofa_amount_xxx(): new functions.
    - ofa_counter_xxx(): new functions.
 
